finalizacao da estrutura do site

--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+    <a target="_blank" href="https://icons8.com/icon/16713/whatsapp"
+      >Whatsapp</a
+    >
+    icon by
+    <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icon/37246/gmail">Gmail</a>
+    icon by
+    <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icon/86327/baixar">Baixar</a>
+    icon by
+    <a target="_blank" href="https://icons8.com">Icons8</a>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portifolio JP</title>
+    <title>Joao Pedro</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1500,
+      });
+    </script>
   </body>
 </html>
